first chart implemented

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,24 @@
+backports-abc==0.4
+bokeh==0.12.2
+certifi==2016.8.31
 Django==1.10
+futures==3.0.5
+Jinja2==2.8
+MarkupSafe==0.23
 meld3==1.0.2
+numpy==1.11.1
+oauthlib==0.6.1
+pandas==0.18.1
 psycopg2==2.6.2
+pymongo==2.7
+python-dateutil==2.5.3
+pytz==2016.6.1
+PyYAML==3.12
+requests==2.1.0
+requests-oauthlib==0.4.0
+singledispatch==3.4.0.3
 six==1.10.0
-supervisor-twiddler==1.0.0
 supervisor==3.0
+supervisor-twiddler==1.0.0
+tornado==4.4.1
+twython==3.1.2
